# python-project-50

./: Makefile  README.md  pyproject.toml
.github/workflows/: lint-test.yml  tests.yml
gendiff/additionals/: additional_tools.py  checkers.py  replacers.py  result_generators.py
gendiff/cli/: cli.py
gendiff/dictionaries/: additional_tools.py  generator.py
gendiff/formater/: formater.py
gendiff/generate_diff/: gendiff.py
gendiff/parcer/: parcer.py
gendiff/scripts/: gendiff_script.py
tests/: test_gendiff_json.py  test_gendiff_yml.py  test_generate_difference.py
tests/fixtures/YML/: file1_2.yml  file2_2.yml
